# MatLabToC--VoiceRecognize

./: CMakeLists.txt  README.md  VoiceRecognize.m
VoiceRecognize1_pkg/: buildInfo.mat  rtw_proj.tmw
include/: AsyncBuffercg.h  AsyncBuffercgHelper.h  AudioRead.h  DeepLearningNetwork.h  FFTImplementationCallback.h  MWElementwiseAffineLayerImpl.hpp  MWFusedConvReLULayerImpl.hpp  SystemCore.h  VoiceRecognize.h  VoiceRecognize_data.h  VoiceRecognize_initialize.h  VoiceRecognize_rtwutil.h  VoiceRecognize_terminate.h  VoiceRecognize_types.h  categorical.h  cellstr.h  classify.h  designMelFilterBank.h  main.h  matlabCodegenHandle.h  melSpectrogram.h  predict.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  stft.h
src/: AsyncBuffercg.cpp  AsyncBuffercgHelper.cpp  AudioRead.cpp  DeepLearningNetwork.cpp  FFTImplementationCallback.cpp  MWElementwiseAffineLayerImpl.cpp  MWFusedConvReLULayerImpl.cpp  SystemCore.cpp  VoiceRecognize.cpp  VoiceRecognize_data.cpp  VoiceRecognize_initialize.cpp  VoiceRecognize_rtwutil.cpp  VoiceRecognize_terminate.cpp  categorical.cpp  cellstr.cpp  classify.cpp  designMelFilterBank.cpp  main.cpp  matlabCodegenHandle.cpp  melSpectrogram.cpp  predict.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  stft.cpp
